# ZFModuleDemo_app

./: .clang_complete  .travis.yml  README.md  zfautoscript_zfmodule.zfsh
.github/workflows/: android.yml  cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml  ios.yml  qt_linux.yml  qt_macos.yml  qt_windows.yml  qt_windows_with_src.yml
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/: settings.gradle
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/zfapp/: CMakeLists.txt  build.gradle
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/zfapp/src/main/: AndroidManifest.xml
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/zfapp/src/main/java/com/ZFFramework/Android/ZFModuleDemo_app/: Loader.java
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/zfapp/src/main/java/com/ZFFramework/ZFModuleDemo_app/: Loader.java
ZFModuleDemo_app/zfproj/Android/ZFModuleDemo_app/zfprojConfigHelper/: build.gradle
ZFModuleDemo_app/zfproj/Qt/ZFModuleDemo_app/: ZFModuleDemo_app.pro  qt_main.cpp
ZFModuleDemo_app/zfproj/cmake/ZFModuleDemo_app/: CMakeLists.txt  cmake_main.cpp  zfprojConfig.cmake
ZFModuleDemo_app/zfproj/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/: ZFCompileSource.sh  ZFCopyResource.sh  project.pbxproj  zfsetup.sh
ZFModuleDemo_app/zfproj/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/xcshareddata/xcschemes/: ZFModuleDemo_app.xcscheme
ZFModuleDemo_app/zfproj/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcworkspace/: contents.xcworkspacedata
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/: settings.gradle
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/: CMakeLists.txt  build.gradle
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/src/main/: AndroidManifest.xml
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/src/main/java/com/ZFFramework/Android/ZFModuleDemo_app/: Loader.java
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/src/main/java/com/ZFFramework/ZFModuleDemo_app/: Loader.java  ZFLoader.java
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/src/main/res/values/: strings.xml
ZFModuleDemo_app/zfproj_with_src/Android/ZFModuleDemo_app/zfprojConfigHelper/: build.gradle
ZFModuleDemo_app/zfproj_with_src/Qt/ZFModuleDemo_app/: ZFModuleDemo_app.pro
ZFModuleDemo_app/zfproj_with_src/cmake/ZFModuleDemo_app/: CMakeLists.txt  zfprojConfig.cmake
ZFModuleDemo_app/zfproj_with_src/iOS/ZFModuleDemo_app/: Podfile
ZFModuleDemo_app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/: project.pbxproj  zfsetup.sh
ZFModuleDemo_app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/xcshareddata/xcschemes/: ZFModuleDemo_app.xcscheme
ZFModuleDemo_app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app_zfprojConfig.xcodeproj/: project.pbxproj
ZFModuleDemo_app/zfscript/: zfautoscript_zfmodule.zfsh  zfautoscript_zfproj.txt
ZFModuleDemo_app/zfsrc/: main.cpp
app/zfproj/Android/ZFModuleDemo_app/: settings.gradle
app/zfproj/Android/ZFModuleDemo_app/zfapp/: build.gradle
app/zfproj/Android/ZFModuleDemo_app/zfprojConfigHelper/: build.gradle
app/zfproj/Qt/ZFModuleDemo_app/: ZFModuleDemo_app.pro
app/zfproj/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcworkspace/: contents.xcworkspacedata
app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/: build.gradle
app/zfproj_with_src/Android/ZFModuleDemo_app/zfapp/src/main/java/com/ZFFramework/ZFModuleDemo_app/: ZFApplication.java
app/zfproj_with_src/Android/ZFModuleDemo_app/zfprojConfigHelper/: build.gradle
app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/: zfsetup.sh
app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app.xcworkspace/: contents.xcworkspacedata
app/zfproj_with_src/iOS/ZFModuleDemo_app/ZFModuleDemo_app_zfprojConfig.xcodeproj/: dummy.mm
app/zfscript/: zfautoscript_cleanup.zfsh  zfautoscript_zfproj.txt
app/zfsrc/: main.cpp
